# GUI-Puissance4

./: .gitignore  CMakeLists.txt  Readme.md  makefile
includes/: init.h  my.h
libs/CSFML/lib/: libcsfml-graphics.dylib  libcsfml-system.dylib  libcsfml-window.dylib
src/: main.c  utils.c
src/game/: game_back.c  game_view.c
